added refs to Liu and Ochoukov, multiplet splitting, drift resonances

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -152,7 +152,10 @@ language\cite{Bezanson2017}. These results narrow the gap between analytical
 theory and expensive HPC simulations and can be run readily on desktop computers
 in a matter of minutes, further enabling research into this topic. Note that
 this study focusses on edge-ICE, named for the region of plasma from which the signal
-arises, as opposed to core-ICE\cite{Ochoukov2018}.
+arises, as opposed to core-ICE\cite{Ochoukov2018}. Recent observations made with
+higher resolution equipment than those referred to on JET have
+shown multiplet splitting in NBI-driven spectra; from the core on
+ASDEX-Upgrade\cite{Ochoukov2019} and edge on EAST\cite{Lui2020}.
 
 In section 2, the computational method is described for calculating the linear growth rates, which are presented for energetic ring-beam alpha-particles with non-zero perpendicular thermal spread in section 3. Results are summarised in section 4.
 
@@ -397,7 +400,9 @@ counterpart figure to Fig. \ref{fig:2D_F12_physicalpitch} as Fig.
 at e.g. the $12^{th}$ harmonic  near $(k_\parallel \simeq 0\; \Omega_{i}/V_A,
 k_\bot \simeq 13\; \Omega_{i}/V_A)$, where $V_A$ is the Alfv{\'e}n speed.
 Other possible mechanisms for doublet splitting could be grad-B or curvature
-drifts\cite{Cottrell1993,Fulop1998}. Qualitatively, scattered points in Fig.
+drifts\cite{Cottrell1993,Fulop1998} or potentially any mechanism that is capable
+of modifying the wave-particle resonance condition.
+Qualitatively, scattered points in Fig.
 \ref{fig:2D_F12_physicalpitch}(a) resembles the experimental observations given
 by the black trace in that the
 signal below the $7^{th}$ cyclotron harmonics is lower and flatter with well
@@ -698,6 +703,12 @@ Heidbrink W W \textit{et al} A 2006 \textit{Nucl. Fusion} \textbf{46} 324
 \bibitem{Bezanson2017}
 Bezanson J, Edelman A, Karpinski S, and Shah V B 2017 \textit{SIAM review} \textbf{59} 1
 % Julia: A fresh approach to numerical computing,
+
+\bibitem{Ochoukov2019}
+Ochoukov R \textit{et al} 2019 \textit{Nucl. Fusion} \textbf{59} 086032
+
+\bibitem{Lui2020}
+Liu L \text{et al} 2020 \textit{Nucl. Fusion} \textbf{60} 044002
 
 \bibitem{Fredrickson2019}
 Fredrickson E D \textit{et al} 2019 \textit{Physics of Plasmas} \textbf{26}, 032111
